# xlerobot_gazebo

./: .dockerignore  .gitignore  Dockerfile  README.md  THIRD_PARTY.md  compose.yml  ros_entrypoint_overlay.sh
scripts/: run_gui.sh  run_headless.sh  run_so101_gui.sh  run_so101_headless.sh  run_xlerobot_gui.sh  run_xlerobot_headless.sh
src/demo_bot_gazebo/: CMakeLists.txt  package.xml
src/demo_bot_gazebo/config/: controllers.yaml
src/demo_bot_gazebo/launch/: sim.launch.py
src/demo_bot_gazebo/urdf/: demo_bot.urdf.xacro
src/demo_bot_gazebo/worlds/: demo_world.sdf
src/so101_gazebo/: CMakeLists.txt  package.xml
src/so101_gazebo/config/: controllers.yaml
src/so101_gazebo/launch/: sim.launch.py
src/so101_gazebo/urdf/: so101_gazebo.urdf.xacro
src/xlerobot_gazebo/: CMakeLists.txt  package.xml
src/xlerobot_gazebo/config/: base_envelope_real.yaml  base_geometry.yaml  controllers.yaml  controllers_planar.yaml  planner_test_envelope.yaml
src/xlerobot_gazebo/launch/: sim.launch.py
src/xlerobot_gazebo/scripts/: base_twist_utils.py  keyboard_teleop.py  odom_relay.py  omni_twist_to_wheels.py  omni_wheel_odometry.py  planar_joint_odometry.py  twist_stamped_relay.py  twist_to_planar_cmd.py  xlerobot_official_base_adapter.py
src/xlerobot_gazebo/urdf/: xlerobot.urdf.xacro  xlerobot_planar.urdf.xacro
tests/: test_base_twist_utils.py  test_omni_kinematics.py  test_planar_odometry_utils.py
