<?xml version="1.0"?>
<package format="3">
  <name>demo_bot_gazebo</name>
  <version>0.1.0</version>
  <description>Minimal Gazebo Harmonic + ros2_control demo robot.</description>
  <maintainer email="qifei@example.com">qifei</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
